--- a/css/styles.css
+++ b/css/styles.css
@@ -110,8 +110,8 @@ p {
 	border: solid 2px black;
 	padding: 5px;
 	display: inline-block;
-	width: 500px;
-	height: 300px;
+	height: 50%;
+	width: 50%;
 	margin:30px 5px 30px 75px;
 	transition:1s;
 }
@@ -135,7 +135,6 @@ p {
 }
 
 .imgPos3 {
-	border:solid 2px black;
 	padding:5px;
 	margin:0px 10px 0px 10px;
 	display:inline-block;
@@ -232,3 +231,59 @@ menu {
    	background-color: black;
 }
 }
+
+.ima {
+max-width: 100%;
+}
+
+*{margin: 0;padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;}
+    
+    .contenedor{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    .contenedor figure{
+       position:relative;
+        height: 250px;
+        cursor: pointer;
+        width: 350px;
+        overflow: hidden;
+        border-radius: 6px;
+        box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+    }
+    .contenedor figure img{
+        width: 100%;
+        height: 100%;
+        transition: all 500ms ease-out;
+    }
+    .contenedor figure .capa{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,103,123,0.7);
+        transition: all 500ms ease-out;
+        opacity: 0;
+        visibility: hidden;
+       text-align: center;
+    }
+    .contenedor figure .capa h3{
+        color: #fff;
+        font-weight: 400;
+        margin-bottom: 120px;
+        transition: all 500ms ease-out;
+         margin-top: 30px;
+    }
+    .contenedor figure .capa p{
+        color: #fff;
+        font-size: 15px;
+        line-height: 1.5;
+        width: 100%;
+        max-width: 220px;
+        margin: auto;
+    }
