--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,5 +1,5 @@
 .boxes {
-  background-color: #000000; }
+  background-color: #979797; }
   .boxes__box1 {
     margin: 60px 0px 0px 175px; }
   .boxes__box2 {
@@ -11,7 +11,7 @@
     margin: -115px 0px 0px 820px; }
 
 .imgPos__imgPos1 {
-  border: solid 2px black;
+  border-radius: 30px 30px 30px 30px;
   padding: 5px;
   display: inline-block;
   margin: 30px 5px 30px 75px;
@@ -23,11 +23,11 @@
   transform: scale(1.07); }
 
 .imgPos__imgPos2 {
-  border: solid 2px black;
+  border-radius: 30px 30px 30px 30px;
   padding: 5px;
   display: inline-block;
-  width: 560px;
-  height: 350px;
+  width: 550px;
+  height: 400px;
   margin: 0px 0px 30px 50px;
   transition: 1s; }
 
@@ -79,9 +79,6 @@
 .carousel-control-next {
   right: 0;
   background-image: linear-gradient(270deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.001)); }
-
-.footer:hover {
-  background-color: silver; }
 
 .imgPos1:hover {
   transform: scale(1.07); }
