--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,23 +1,8 @@
-.boxes {
-  background-color: #979797; }
-  .boxes__box1 {
-    margin: 60px 0px 0px 175px; }
-  .boxes__box2 {
-    margin: 15px 0px 0px 175px; }
-  .boxes__box3 {
-    margin: -55px 500px 0px 450px;
-    text-align: center; }
-  .boxes__box4 {
-    margin: -115px 0px 0px 820px; }
-
 .imgPos__imgPos1 {
   border-radius: 30px 30px 30px 30px;
   padding: 5px;
-  display: inline-block;
-  margin: 30px 5px 30px 75px;
-  width: 520px;
-  height: 320px;
-  transition: 1s; }
+  transition: 1s;
+  margin: 25px 0px 25px 0px; }
 
 .imgPos__imgPos1:hover {
   transform: scale(1.07); }
@@ -25,10 +10,7 @@
 .imgPos__imgPos2 {
   border-radius: 30px 30px 30px 30px;
   padding: 5px;
-  display: inline-block;
-  width: 550px;
-  height: 400px;
-  margin: 0px 0px 30px 50px;
+  margin: 25px 0px 25px 0px;
   transition: 1s; }
 
 .imgPos__imgPos2:hover {
