--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ p {
 	display: inline-block;
 	width: 550px;
 	height: 300px;
-	margin: 0px 0px 30px 50px;
+	margin: 50px 0px 50px 0px;
 	transition:1s;
 }
 
@@ -153,7 +153,6 @@ p {
 
 main {
 	display: grid;
-	margin: 0 auto;
 
 	grid-template-areas: 
 	"nav"
@@ -161,14 +160,8 @@ main {
 	"contenido2"
 	"contenido3"
 	"footer";
-	grid-template-rows: 60px 200px 250px 800px 1fr;
+	grid-template-rows: 60px 175px 150px 1fr;
 	grid-auto-columns: 1fr;
-}
-
-footer {
-	grid-area:footer;
-	background-color:black;
-	color:white;
 }
 
 /*-- ANIMACIONES --*/
@@ -184,33 +177,24 @@ footer {
 
 /*-- MEDIA QUERIES --*/
 
-.miestilo {
-       background-color: #B6CEF4;
+@media screen and (max-width:600px){
+.adapt {
+	width:100%;
+	height:150px;
 }
 
-@media (max-width: 768px) {
-.miestilo {
-background-color: #A9C7CA; 
-text-align: center;
-align-items:center;
-}
-
-@media screen and (max-width: 768px) {
-menu {
-    float: none;
-    width: 100%;
-   	background-color: black;
-}
-}
-
-@media screen (max-width: 200px max-height: 200px) and (max-width:600px max-height: 600px){
 img {
-	max-width:300px;
-	max-height:200px;
+	width:100%;
+	height:auto;
+	flex-wrap: wrap;
 }
 
 h1 {
+	font-size: 20px;	
+}
 
+h2 {
+	font-size: 20px;
 }
 
 main {
@@ -223,40 +207,12 @@ main {
 	"contenido2"
 	"contenido3"
 	"footer";
-	grid-template-rows: 55px 100px 900px 2fr 1fr;
+	grid-template-rows: 100px 150px 500px 1fr;
 	grid-auto-columns: auto;
-}
-
-.imgPos__imgPos2 {
-  border-radius: 30px 30px 30px 30px;
-  padding: 5px;
-  display: inline-block;
-  width: 550px;
-  height: 400px;
-  margin: 0px 30px 0px 30px;
-  transition: 1s; 
 }
 }
 
 iframe {
  max-width: 100%;
- height: auto;
-}
-
-.ima {
-max-width: 100%;
-}
-
-*{
-	margin: 0;padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-.list-group-item:hover {
-	transform:scale(1.07);
-} 
-
-.separador {
-margin: 30px 0px 20px;
+ max-height: 100%;
 }
